# just-log

./: README.md  pyproject.toml
src/just_log/: logger.py  monitor.py
